unpackaged/main/default/objects/Proposed_Asset__c/Proposed_Asset__c.object-meta.xml
<CustomObject>
    <label>Proposed Asset</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Proposed Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposed Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>