unpackaged/main/default/objects/Proposed_Asset__c/fields/Cost_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Unit__c</fullName>
    <formula>IF (TEXT(Proposed_Asset__c)=&quot;Vx510&quot;,80, 
IF (TEXT(Proposed_Asset__c)=&quot;Vx520&quot;,255, 
IF (TEXT(Proposed_Asset__c)=&quot;Vx820&quot;,225, 
IF (TEXT(Proposed_Asset__c)=&quot;Vx680&quot;,420, 
IF (TEXT(Proposed_Asset__c)=&quot;Vx680 Charger&quot;,65, 
IF (TEXT(Proposed_Asset__c)=&quot;Vx680 BT Base Station&quot;,165, 
IF (TEXT(Proposed_Asset__c)=&quot;Terminal Lid&quot;,15, 
IF (TEXT(Proposed_Asset__c)=&quot;Vx670&quot;,175,0))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>