unpackaged/main/default/objects/Proposed_Asset__c/fields/Proposed_Asset__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Asset__c</fullName>
    <label>Proposed Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Terminal_Type</valueSetName>
    </valueSet>
</CustomField>