unpackaged/main/default/objects/Proposed_Asset__c/fields/Proposed_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Installation_Date__c</fullName>
    <label>Proposed Installation Date</label>
    <type>Date</type>
</CustomField>