unpackaged/main/default/objects/Proposed_Asset__c/recordTypes/Proposed_Asset_CZ.recordType-meta.xml
<RecordType>
    <fullName>Proposed_Asset_CZ</fullName>
    <active>true</active>
    <label>Proposed Asset CZ</label>
</RecordType>